feat(filters): added filters router
